--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@next/env": "^14.0.3",
     "axios": "^0.24.0",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.7.5",
